main.css: Fix the edge of img overlapping slide
Reduce img to 95% of container width, so that it should never reach
the edge of the container

--- a/assets/main.css
+++ b/assets/main.css
@@ -144,7 +144,7 @@ pre {
 
 .about-img {
   border-radius: 8px;
-  overflow: hidden; }
+  width: 95%; }
 
 .slide {
   overflow: hidden; }
